--- a/sass/_files.scss
+++ b/sass/_files.scss
@@ -6,7 +6,7 @@
   .container {
     display: grid;
     place-items: center;
-    grid-template-columns: 120px 120px;
+    grid-template-columns: 130px 130px;
     gap: 1rem;
     width: auto;
     h3 {
