--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -59,7 +59,7 @@
     position: fixed;
     right: 2vmin;
     bottom: 2vmin;
-    max-width: 22ch;
+    max-width: 24ch;
     margin-bottom: 0;
     border-radius: var(--border-radius);
     background-color: var(--color-light);
